# AZAS-MOD-TOOLS

OldCodeSnippets/: ROAD_GENERATOR_1.py  (+7 more)
survivor-signal-reboot/: README.md  assistant_project.srx  check_first.py  check_keys.py  check_none.py  color_debug.py  node_check.py  pyproject.toml  repr_check.py  run.py  sample_check.py  temp_assist_check.py  temp_check.py  voice_colors.py
survivor-signal-reboot/Project Planning/: Concepts.md  Findings.md  Proposals.md  README.md  ToDo.md
survivor-signal-reboot/Project Planning/References/: DeviceData.html  DevicePresets.html  ERINRADIO.xml  MediaData.html  RadioAPI.html  RadioBroadCast.html  RadioData.xml  RadioLine.html  RadioScript.html  RecordedMedia.html  first_saved_snapshot_prototype.json  modding_index1.html  radio_devices_package.html  radio_effects_package.html  radio_media_package.html  recorded_media.lua  second_saved_snapshot_prototype.json  zombie_radio_package.html
survivor-signal-reboot/VanillaFiles/: RadioData.xml
survivor-signal-reboot/assets/: SURVIVORRADIO4_A.srx
survivor-signal-reboot/ssr/: search.py
survivor-signal-reboot/ssr/ai/: actions.py  assistant.py
survivor-signal-reboot/ssr/config/: __init__.py  settings.py  user_settings.json
survivor-signal-reboot/ssr/core/: __init__.py  models.py  project_ops.py
survivor-signal-reboot/ssr/io/: exporter.py  importers.py  modpack.py  project.py  serializer.py
survivor-signal-reboot/ssr/ui/: app.py  styles.py
survivor-signal-reboot/ssr/utils/: typewriter_sound.py
survivor-signal-reboot/tests/: conftest.py  test_exporter.py  test_roundtrip.py
(+86 files in other folders)
